// Vitest Snapshot v1

exports[`components > N8nCheckbox > should render with both child and label 1`] = `
<div>
  <label
    class="el-checkbox n8n-checkbox n8nCheckbox"
    labelsize="medium"
  >
    <span
      class="el-checkbox__input"
    >
      <span
        class="el-checkbox__inner"
      />
      <input
        aria-hidden="false"
        class="el-checkbox__original"
        type="checkbox"
        value="Checkbox"
      />
    </span>
    <span
      class="el-checkbox__label"
    >
      <strong>
        Bold text
      </strong>
      <div
        class="container"
      >
        <label
          class="n8n-input-label inputLabel heading medium"
        >
          <div
            class="title"
          >
            <span
              class="n8n-text size-medium regular"
            >
               Checkbox 
              <!---->
            </span>
          </div>
          <!---->
          <!---->
          <!---->
        </label>
      </div>
      <!---->
    </span>
  </label>
</div>
`;

exports[`components > N8nCheckbox > should render with child 1`] = `
<div>
  <label
    class="el-checkbox n8n-checkbox n8nCheckbox"
    labelsize="medium"
  >
    <span
      class="el-checkbox__input"
    >
      <span
        class="el-checkbox__inner"
      />
      <input
        aria-hidden="false"
        class="el-checkbox__original"
        type="checkbox"
        value=""
      />
    </span>
    <span
      class="el-checkbox__label"
    >
      <strong>
        Bold text
      </strong>
      <!---->
      <!---->
    </span>
  </label>
</div>
`;

exports[`components > N8nCheckbox > should render with label 1`] = `
<div>
  <label
    class="el-checkbox n8n-checkbox n8nCheckbox"
    labelsize="medium"
  >
    <span
      class="el-checkbox__input"
    >
      <span
        class="el-checkbox__inner"
      />
      <input
        aria-hidden="false"
        class="el-checkbox__original"
        type="checkbox"
        value="Checkbox"
      />
    </span>
    <span
      class="el-checkbox__label"
    >
      <div
        class="container"
      >
        <label
          class="n8n-input-label inputLabel heading medium"
        >
          <div
            class="title"
          >
            <span
              class="n8n-text size-medium regular"
            >
               Checkbox 
              <!---->
            </span>
          </div>
          <!---->
          <!---->
          <!---->
        </label>
      </div>
      <!---->
    </span>
  </label>
</div>
`;

exports[`components > N8nCheckbox > should render without label and child content 1`] = `
<div>
  <label
    class="el-checkbox n8n-checkbox n8nCheckbox"
    labelsize="medium"
  >
    <span
      class="el-checkbox__input"
    >
      <span
        class="el-checkbox__inner"
      />
      <input
        aria-hidden="false"
        class="el-checkbox__original"
        type="checkbox"
        value=""
      />
    </span>
    <!---->
  </label>
</div>
`;
